--- a/index.html
+++ b/index.html
@@ -1,83 +1,39 @@
-<!DOCTYPE html><html lang="bn">
+<!DOCTYPE html>
+<html lang="bn">
 <head>
   <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Crunchyroll Premium Offer</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <title>Crunchyroll Premium BD · পণ্য পেজ</title>
   <style>
-    body {
-      font-family: 'Segoe UI', sans-serif;
-      background-color: #fff9f5;
-      margin: 0;
-      padding: 0;
-    }
-    .container {
-      max-width: 800px;
-      margin: 30px auto;
-      padding: 20px;
-      background: #ffffff;
-      box-shadow: 0 0 10px rgba(0,0,0,0.1);
-      border-radius: 10px;
-    }
-    .product-img {
-      width: 100%;
-      border-radius: 12px;
-    }
-    .title {
-      color: #ff6600;
-      font-size: 26px;
-      margin-top: 20px;
-    }
-    .description {
-      font-size: 16px;
-      color: #444;
-      margin-top: 10px;
-    }
-    .price {
-      font-size: 20px;
-      color: #009933;
-      margin: 15px 0;
-    }
-    .button {
-      display: inline-block;
-      background-color: #ff6600;
-      color: #fff;
-      padding: 12px 20px;
-      border: none;
-      border-radius: 8px;
-      font-size: 16px;
-      cursor: pointer;
-      text-decoration: none;
-    }
-    .button:hover {
-      background-color: #e65c00;
-    }
-    .note {
-      font-size: 14px;
-      color: #777;
-      margin-top: 15px;
-    }
+    body { background:#f4f4f8; font-family:'Segoe UI',sans-serif; margin:0; padding:0; display:flex; justify-content:center; }
+    .card { max-width:480px; background:#fff; border-radius:12px; overflow:hidden; box-shadow:0 4px 15px rgba(0,0,0,0.1); margin:30px; }
+    .card img { width:100%; display:block; }
+    .info { padding:20px; }
+    .info h1 { margin:0;font-size:24px;color:#ff6600; }
+    .info p.desc { margin:10px 0;color:#555;font-size:15px; }
+    .info .price { color:#009933;font-size:22px;font-weight:bold; margin:15px 0; }
+    .info ul { padding-left:20px; margin:10px 0;color:#444; }
+    .info ul li { margin:6px 0; font-size:14px; }
+    .info .btn { display:block; background:#ff6600; color:white; text-align:center; padding:14px; border-radius:8px; font-size:16px; text-decoration:none; margin-top:20px; }
+    .info .btn:hover { background:#e65c00; }
+    .info .note { margin-top:15px;color:#888;font-size:13px; }
   </style>
 </head>
 <body>
-  <div class="container">
-    <img src="https://static.crunchyroll.com/fms/landscape_poster/960x540/100/image.png" alt="Anime Image" class="product-img"><h1 class="title">Crunchyroll Premium BD Offer</h1>
-
-<p class="description">
-  🔸 আনলিমিটেড HD+ Anime স্ট্রিমিং <br>
-  🔸 No Ads – সম্পূর্ণ বিজ্ঞাপনমুক্ত অভিজ্ঞতা <br>
-  🔸 Simultaneous Streaming – একাধিক ডিভাইসে একসাথে<br>
-  🔸 Weekly নতুন এপিসোড!<br>
-  🔸 Premium Personal & Share Account বিকল্প
-</p>
-
-<p class="price">শুরু মাত্র 100 টাকা/মাস!</p>
-
-<a href="https://crunchyrollbdshop.neocities.org/order.html" class="button">🛒 এখনই অর্ডার করুন</a>
-
-<p class="note">
-  📌 নোট: এটি একটি ডিজিটাল সাবস্ক্রিপশন পরিষেবা। আপনার ইমেইলে ক্রেডেনশিয়াল পাঠানো হবে। পেমেন্ট করার আগে নিশ্চিত হয়ে অর্ডার করুন।
-</p>
-
+  <div class="card">
+    <img src="https://static.crunchyroll.com/fms/landscape_poster/960x540/100/image.png" alt="Crunchyroll Premium">
+    <div class="info">
+      <h1>Crunchyroll Premium BD</h1>
+      <p class="desc">নো অ্যাড, HD স্ট্রিমিং, একাধিক ডিভাইসে ব্যবহার। তুমি খুশি, অনলাইনে এনিমে কখনোই বন্ধ না!</p>
+      <p class="price">Shared – 100 TK / মাস</p>
+      <ul>
+        <li>🎥 Ad‑free streaming</li>
+        <li>📶 HD & Simultaneous Streams</li>
+        <li>📀 Weekly new episodes</li>
+      </ul>
+      <a href="https://crunchyrollbdshop.neocities.org/crunchyroll_proxy_form.html" class="btn">🛒 এখনই অর্ডার করুন</a>
+      <p class="note">* পেমেন্ট: বিকাশ / নগদ / রকেট (নম্বর: 01603599843)</p>
+    </div>
   </div>
 </body>
 </html>
