--- a/index.html
+++ b/index.html
@@ -1,115 +1,127 @@
 <!DOCTYPE html><html lang="bn">
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>Crunchyroll Premium BD Shop</title>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Crunchyroll Premium Subscription</title>
+  <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600;700&display=swap" rel="stylesheet">
   <style>
     body {
+      font-family: 'Inter', sans-serif;
+      background: linear-gradient(to bottom, #131c2b, #202f45);
+      color: white;
       margin: 0;
       padding: 0;
-      font-family: 'Segoe UI', sans-serif;
-      background: #fff;
-      color: #222;
     }
     header {
-      background: #000;
+      background-color: #0a0f1c;
+      padding: 20px;
       text-align: center;
+      box-shadow: 0 2px 10px rgba(0,0,0,0.5);
     }
-    header img {
-      width: 100%;
-      max-height: 400px;
-      object-fit: cover;
-      border-bottom: 5px solid #ff6600;
+    header h1 {
+      margin: 0;
+      color: #ff9f1c;
     }
-    .container {
-      max-width: 500px;
+    .hero {
+      text-align: center;
+      margin-top: 20px;
+    }
+    .hero img {
+      width: 90%;
+      max-width: 600px;
+      border-radius: 10px;
+    }
+    .section {
+      background-color: #1c2a3a;
       margin: 20px auto;
       padding: 20px;
-      background: #f9f9f9;
-      border-radius: 15px;
-      box-shadow: 0 0 15px rgba(0,0,0,0.1);
+      max-width: 700px;
+      border-radius: 12px;
+      box-shadow: 0 0 15px rgba(0,0,0,0.4);
     }
-    h2 {
-      text-align: center;
-      color: #ff6600;
+    .section h2 {
+      color: #ff4081;
+      border-bottom: 2px solid #ff4081;
+      padding-bottom: 5px;
     }
-    input, select, button {
-      width: 100%;
-      padding: 12px;
+    .price {
+      font-size: 24px;
+      color: #ffcc00;
       margin: 10px 0;
+    }
+    input[type="number"] {
+      width: 100%;
+      padding: 10px;
+      margin: 10px 0;
+      border: none;
       border-radius: 8px;
-      border: 1px solid #ccc;
-      font-size: 16px;
+      font-size: 18px;
     }
     button {
-      background: #ff6600;
+      width: 100%;
+      padding: 12px;
+      font-size: 18px;
+      background-color: #ff4081;
       color: white;
       border: none;
+      border-radius: 8px;
       cursor: pointer;
+      transition: 0.3s;
     }
     button:hover {
-      background: #e65c00;
+      background-color: #e23370;
     }
-    .whatsapp-btn {
+    .description {
+      margin-top: 20px;
+      line-height: 1.7;
+    }
+    .whatsapp-button {
       position: fixed;
       bottom: 20px;
       right: 20px;
-      background: #25D366;
-      color: white;
-      padding: 12px 20px;
-      border-radius: 50px;
-      text-decoration: none;
-      font-size: 18px;
-      box-shadow: 0 0 10px rgba(0,0,0,0.3);
+      background-color: #25D366;
+      border-radius: 50%;
+      padding: 15px;
+      box-shadow: 0 0 15px rgba(0,0,0,0.3);
+      cursor: pointer;
+    }
+    .whatsapp-button img {
+      width: 30px;
+      height: 30px;
     }
   </style>
 </head>
-<body><header>
-  <img src="https://i.ibb.co/WWR5XwRz/banner.jpg" alt="Anime Banner" />
-</header><div class="container">
-  <h2>🎉 অর্ডার ফর্ম</h2>
-  <form id="orderForm">
-    <input type="text" name="name" placeholder="আপনার নাম" required />
-    <input type="email" name="email" placeholder="ইমেইল" required />
-    <input type="text" name="address" placeholder="ঠিকানা" required />
-    <input type="text" name="mobile" placeholder="মোবাইল নাম্বার" required />
-    <select name="package" required>
-      <option value="">প্যাকেজ সিলেক্ট করুন</option>
-      <option value="1 Month Share – 100 TK">1 Month – 100 TK</option>
-      <option value="3 Months Share – 300 TK">3 Months – 300 TK</option>
-    </select>
-    <input type="text" name="payment_number" placeholder="পেমেন্ট নাম্বার" required />
-    <input type="text" name="trans_id" placeholder="লেনদেন নম্বর" required />
-    <select name="payment_method" required>
-      <option value="Bkash">Bkash</option>
-      <option value="Nagad">Nagad</option>
-    </select>
-    <button type="submit">✅ অর্ডার কনফার্ম করুন</button>
-  </form>
-</div><a class="whatsapp-btn" href="https://wa.me/8801305736690?text=হ্যালো%20আমি%20Crunchyroll%20সাবস্ক্রিপশন%20নিতে%20চাই" target="_blank">
-  🛋 WhatsApp সাপোর্ট
-</a><script src="https://www.gstatic.com/firebasejs/9.6.1/firebase-app-compat.js"></script><script src="https://www.gstatic.com/firebasejs/9.6.1/firebase-firestore-compat.js"></script><script>
-  const firebaseConfig = {
-    apiKey: "AIzaSyDDvKtm-Mu_12pDLo_9bPvLOusx6YyoYI4",
-    authDomain: "crunchyrollpremiumbd-shop.firebaseapp.com",
-    projectId: "crunchyrollpremiumbd-shop",
-  };
-  firebase.initializeApp(firebaseConfig);
-  const db = firebase.firestore();
-
-  document.getElementById("orderForm").addEventListener("submit", function(e) {
-    e.preventDefault();
-    const formData = new FormData(this);
-    const order = {};
-    formData.forEach((v, k) => order[k] = v);
-    order.timestamp = firebase.firestore.FieldValue.serverTimestamp();
-
-    db.collection("orders").add(order).then(() => {
-      alert("✅ অর্ডার কনফার্ম হয়েছে!");
-      document.getElementById("orderForm").reset();
-    }).catch(err => {
-      alert("❌ অর্ডার ব্যর্থ হয়েছে");
-    });
-  });
-</script></body>
+<body>
+  <header>
+    <h1>Crunchyroll Premium</h1>
+  </header>
+  <div class="hero">
+    <img src="https://i.ibb.co/WWR5XwRz/anime-banner.jpg" alt="Anime Banner">
+  </div>
+  <div class="section">
+    <h2>Crunchyroll Premium Subscription</h2>
+    <p class="price">
+      ৳69.00 to ৳2499.00
+    </p>
+    <input type="number" id="amount" placeholder="যে এমাউন্টটি দিতে চান তা লিখুন">
+    <button onclick="addToCart()">🛒 Add to Cart</button>
+  </div>
+  <div class="section">
+    <h2>📘 Description</h2>
+    <p class="description">
+      Crunchyroll হলো একটি জনপ্রিয় স্ট্রিমিং প্ল্যাটফর্ম যা মূলত জাপানি এনিমে, ম্যানগা এবং কিছু এশিয়ান ড্রামা দেখার জন্য্য ব্যবহৃত হয়। এখানে আপনি হাজার হাজার এনিমে সিরিজ, সিনেমা এবং কমিক্স অনলাইনে দেখতে পারবেন।
+    </p>
+  </div>
+  <a class="whatsapp-button" href="https://wa.me/8801305736690" target="_blank">
+    <img src="https://upload.wikimedia.org/wikipedia/commons/6/6b/WhatsApp.svg" alt="WhatsApp">
+  </a>  <script>
+    function addToCart() {
+      const amount = document.getElementById("amount").value;
+      if (!amount || amount <= 0) {
+        alert("দয়া করে একটি বৈধ এমাউন্ট লিখুন।");
+        return;
+      }
+      window.location.href = `https://example.com/payment?amount=${amount}`; // আপনার পেমেন্ট পেজের লিঙ্ক দিন
+    }
+  </script></body>
 </html>
