--- a/index.html
+++ b/index.html
@@ -2,126 +2,103 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Crunchyroll Premium Subscription</title>
-  <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600;700&display=swap" rel="stylesheet">
+  <title>Crunchyroll Premium BD Shop</title>
   <style>
     body {
-      font-family: 'Inter', sans-serif;
-      background: linear-gradient(to bottom, #131c2b, #202f45);
-      color: white;
+      font-family: 'Segoe UI', sans-serif;
       margin: 0;
       padding: 0;
+      background-color: #e0f7ea;
     }
-    header {
-      background-color: #0a0f1c;
-      padding: 20px;
-      text-align: center;
-      box-shadow: 0 2px 10px rgba(0,0,0,0.5);
-    }
-    header h1 {
-      margin: 0;
-      color: #ff9f1c;
-    }
-    .hero {
-      text-align: center;
-      margin-top: 20px;
-    }
-    .hero img {
-      width: 90%;
-      max-width: 600px;
-      border-radius: 10px;
-    }
-    .section {
-      background-color: #1c2a3a;
-      margin: 20px auto;
-      padding: 20px;
+    .container {
       max-width: 700px;
-      border-radius: 12px;
-      box-shadow: 0 0 15px rgba(0,0,0,0.4);
+      margin: 30px auto;
+      background: white;
+      padding: 20px;
+      border-radius: 10px;
+      box-shadow: 0 0 15px rgba(0,0,0,0.2);
     }
-    .section h2 {
-      color: #ff4081;
-      border-bottom: 2px solid #ff4081;
-      padding-bottom: 5px;
+    h2 {
+      text-align: center;
+      color: #00695c;
     }
-    .price {
-      font-size: 24px;
-      color: #ffcc00;
-      margin: 10px 0;
-    }
-    input[type="number"] {
-      width: 100%;
-      padding: 10px;
-      margin: 10px 0;
-      border: none;
-      border-radius: 8px;
-      font-size: 18px;
-    }
-    button {
+    input, select, button {
       width: 100%;
       padding: 12px;
-      font-size: 18px;
-      background-color: #ff4081;
-      color: white;
-      border: none;
+      margin: 10px 0;
       border-radius: 8px;
+      border: 1px solid #ccc;
+      font-size: 16px;
+    }
+    button {
+      background-color: #009688;
+      color: white;
       cursor: pointer;
-      transition: 0.3s;
     }
     button:hover {
-      background-color: #e23370;
+      background-color: #00796b;
     }
-    .description {
-      margin-top: 20px;
-      line-height: 1.7;
+    .section-title {
+      font-weight: bold;
+      margin-top: 30px;
+      font-size: 18px;
+      color: #004d40;
     }
-    .whatsapp-button {
-      position: fixed;
-      bottom: 20px;
-      right: 20px;
-      background-color: #25D366;
-      border-radius: 50%;
+    .plan-list {
+      background-color: #f1f8e9;
       padding: 15px;
-      box-shadow: 0 0 15px rgba(0,0,0,0.3);
-      cursor: pointer;
+      border-radius: 8px;
+      margin-bottom: 20px;
     }
-    .whatsapp-button img {
-      width: 30px;
-      height: 30px;
+    .plan-list p {
+      margin: 5px 0;
     }
   </style>
 </head>
 <body>
-  <header>
-    <h1>Crunchyroll Premium</h1>
-  </header>
-  <div class="hero">
-    <img src="https://i.ibb.co/WWR5XwRz/anime-banner.jpg" alt="Anime Banner">
+<div class="container">
+  <h2>💳 পেমেন্ট তথ্য</h2>
+  <form>
+    <input type="text" placeholder="Full Name" required>
+    <input type="email" placeholder="Email" required>
+    <input type="text" placeholder="Street Address" required>
+    <input type="text" placeholder="Mobile Number" required><p class="section-title">আপনাকে নিচের নাম্বারে Send Money করতে হবে:</p>
+<div class="plan-list">
+  <p><strong>Number:</strong> 01603599843</p>
+  <p><strong>Note:</strong> Send Money করার সময় অবশ্যই Send Money অপশন বেছে নিন।</p>
+</div>
+
+<select required>
+  <option value="Bkash">Bkash</option>
+  <option value="Nagad">Nagad</option>
+  <option value="Rocket">Rocket</option>
+</select>
+<input type="text" placeholder="Payment Number" required>
+<input type="text" placeholder="Transaction ID" required>
+<button type="submit">✅ Confirm Buy</button>
+
+  </form>  <div class="section-title">Crunchyroll Share Account ⚡</div>
+  <div class="plan-list">
+    <p>📅 1 Month – Only 100 TK</p>
+    <p>📅 2 Months – Only 200 TK</p>
+    <p>📅 3 Months – Only 300 TK</p>
+    <p>📅 6 Months – Only 600 TK</p>
+    <p>📅 8 Months – Only 840 TK</p>
+  </div>  <div class="section-title">Crunchyroll Personal Profile ⚡</div>
+  <div class="plan-list">
+    <p>📅 1 Month – Only 240 TK</p>
+    <p>📅 2 Months – Only 480 TK</p>
+    <p>📅 3 Months – Only 720 TK</p>
+    <p>📅 6 Months – Only 1440 TK</p>
+    <p>📅 8 Months – Only 1800 TK</p>
+    <p>📅 12 Months – Only 2760 TK</p>
+  </div>  <div class="section-title">Crunchyroll Primary Account ⚡</div>
+  <div class="plan-list">
+    <p>📅 1 Month – Only 650 TK</p>
+    <p>📅 2 Months – Only 1300 TK</p>
+    <p>📅 3 Months – Only 1950 TK</p>
+    <p>📅 6 Months – Only 3600 TK</p>
   </div>
-  <div class="section">
-    <h2>Crunchyroll Premium Subscription</h2>
-    <p class="price">
-      ৳69.00 to ৳2499.00
-    </p>
-    <input type="number" id="amount" placeholder="যে এমাউন্টটি দিতে চান তা লিখুন">
-    <button onclick="addToCart()">🛒 Add to Cart</button>
-  </div>
-  <div class="section">
-    <h2>📘 Description</h2>
-    <p class="description">
-      Crunchyroll হলো একটি জনপ্রিয় স্ট্রিমিং প্ল্যাটফর্ম যা মূলত জাপানি এনিমে, ম্যানগা এবং কিছু এশিয়ান ড্রামা দেখার জন্য্য ব্যবহৃত হয়। এখানে আপনি হাজার হাজার এনিমে সিরিজ, সিনেমা এবং কমিক্স অনলাইনে দেখতে পারবেন।
-    </p>
-  </div>
-  <a class="whatsapp-button" href="https://wa.me/8801305736690" target="_blank">
-    <img src="https://upload.wikimedia.org/wikipedia/commons/6/6b/WhatsApp.svg" alt="WhatsApp">
-  </a>  <script>
-    function addToCart() {
-      const amount = document.getElementById("amount").value;
-      if (!amount || amount <= 0) {
-        alert("দয়া করে একটি বৈধ এমাউন্ট লিখুন।");
-        return;
-      }
-      window.location.href = `https://example.com/payment?amount=${amount}`; // আপনার পেমেন্ট পেজের লিঙ্ক দিন
-    }
-  </script></body>
+</div>
+</body>
 </html>
